third_party/WebKit/Source/core/dom/ShadowTreeStyleSheetCollection.h
@@ -35,6 +35,7 @@
 namespace blink {
 
 class ShadowRoot;
+class StyleEngine;
 class StyleSheetCollection;
 
 class ShadowTreeStyleSheetCollection final
@@ -43,7 +44,7 @@ class ShadowTreeStyleSheetCollection final
 
  public:
   explicit ShadowTreeStyleSheetCollection(ShadowRoot&);
-  void updateActiveStyleSheets();
+  void updateActiveStyleSheets(StyleEngine& masterEngine);
   bool isShadowTreeStyleSheetCollection() const final { return true; }
 
   DEFINE_INLINE_VIRTUAL_TRACE() {
@@ -51,7 +52,7 @@ class ShadowTreeStyleSheetCollection final
   }
 
  private:
-  void collectStyleSheets(StyleSheetCollection&);
+  void collectStyleSheets(StyleEngine& masterEngine, StyleSheetCollection&);
 };
 
 DEFINE_TYPE_CASTS(ShadowTreeStyleSheetCollection,
